fix: 매칭 신청 내용 추가